fix(auth): modify spacing and text size

--- a/client/src/features/auth/components/AuthForm/AuthForm.module.scss
+++ b/client/src/features/auth/components/AuthForm/AuthForm.module.scss
@@ -2,10 +2,10 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   gap: var(--space-8);
-  padding: var(--space-10);
+  padding: var(--space-8) var(--space-10);
 
   .mainContent {
     width: 60%;
@@ -14,6 +14,12 @@
     .header {
       text-align: center;
       margin-bottom: var(--space-7);
+
+      h1 {
+        line-height: var(--leading-normal);
+        font-size: var(--text-2xl);
+        margin-bottom: var(--space-1);
+      }
 
       p {
         font-size: var(--text-sm);
