--- a/client/src/shared/components/AppLogo/AppLogo.module.scss
+++ b/client/src/shared/components/AppLogo/AppLogo.module.scss
@@ -8,6 +8,7 @@
   }
 
   .appName {
+    font-size: var(--text-sm);
     font-weight: var(--font-medium);
   }
 
